--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ drift.load('pctn7cpu36un');
 <!-- End of Async Drift Code -->    
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3&appId=493191380865902&autoLogAppEvents=1"></script>
   
   <div class="site-wrap">
 
@@ -482,7 +484,7 @@ NodeJS, JavaScript, TypeScript, ReactJS, ReactNative</p>
             <ul class="list-unstyled footer-links">
               <li><script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
 <script type="IN/FollowCompany" data-id="19200406" data-counter="bottom"></script></li>
-              <li><a href="#">Courses</a></li>
+              <li><div class="fb-like" data-href="https://www.facebook.com/talentseekio" data-width="" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div></li>
               <li><a href="#">Programs</a></li>
               <li><a href="#">Teachers</a></li>
             </ul>
@@ -535,6 +537,6 @@ NodeJS, JavaScript, TypeScript, ReactJS, ReactNative</p>
 
   
   <script src="js/main.js"></script>
-    
+  <script src="https://my.hellobar.com/a52276e7c75ceacafdaa0762f5f1a772c17b2550.js" type="text/javascript" charset="utf-8" async="async"></script>  
   </body>
 </html>
