--- a/index.html
+++ b/index.html
@@ -485,8 +485,7 @@ NodeJS, JavaScript, TypeScript, ReactJS, ReactNative</p>
               <li><script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
 <script type="IN/FollowCompany" data-id="19200406" data-counter="bottom"></script></li>
               <li><div class="fb-like" data-href="https://www.facebook.com/talentseekio" data-width="" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div></li>
-              <li><a href="#">Programs</a></li>
-              <li><a href="#">Teachers</a></li>
+              <li><a href="https://twitter.com/talentseekio?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @talentseekio</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
             </ul>
           </div>
 
