--- a/index.html
+++ b/index.html
@@ -360,15 +360,15 @@ NodeJS, JavaScript, TypeScript, ReactJS, ReactNative</p>
           </div>
 
           <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="200">
-            <img src="images/sigma@2x.png">
-          </div>
-
-          <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/ciklum@2x.png">
+            <img src="images/microsoft.png">
           </div>
 
           <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="300">
             <img src="images/sigma@2x.png">
+          </div>
+
+          <div class="col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="300">
+            <img src="images/github.png">
           </div>
 
 
